Conversion to stream.toList